--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
+$alpha-black: hsl(0, 0%, 0%, 0.4);
+$black-primary: hsl(0, 0%, 0%);
+$white-primary: hsl(0, 0%, 100%);
+
 @mixin flex(
     $direction: row,
     $content: flex-start,
@@ -19,6 +23,7 @@
 
 body {
     margin: 0;
+    overflow: hidden;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
@@ -29,4 +34,215 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
+}
+
+//Home
+.background {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+.filter {
+    @include flex(column, center, center);
+
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    background-color: $alpha-black;
+
+    h1 {
+        font-size: 6rem;
+        color: $white-primary;
+    }
+
+    button {
+        width: 150px;
+        height: 40px;
+        border: 1px solid $white-primary;
+        color: $white-primary;
+        background-color: transparent;
+        font-size: 1.2rem;
+
+        &:hover {
+            transition: 0.3s ease-in-out;
+            color: $black-primary;
+            background-color: $white-primary;
+        }
+    }
+}
+
+//Catalog
+.catalog-title {
+    margin-top: 2rem;
+    font-size: 3rem;
+    text-align: center;
+}
+.products-container {
+    @include flex(row, space-around, center);
+
+    width: 100vw;
+    height: 100vh;
+}
+
+.product-container {
+    @include flex(column, center, center);
+
+    gap: 1rem;
+
+    img {
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+
+        &:hover {
+            transition: 0.3s ease-in-out;
+            transform: scale(1.1);
+        }
+    }
+}
+
+button {
+    width: 150px;
+    height: 40px;
+    border: 1px solid $black-primary;
+    color: $black-primary;
+    background-color: transparent;
+    font-size: 1.2rem;
+
+    &:hover {
+        transition: 0.3s ease-in-out;
+        color: $white-primary;
+        background-color: $black-primary;
+    }
+}
+
+//Item Details
+.details-container {
+    @include flex(column, center, center);
+
+    width: 100vw;
+    height: 100vh;
+    gap: 1.5rem;
+
+    img {
+        width: 400px;
+        height: 400px;
+        object-fit: cover;
+
+        &:hover {
+            transition: 0.3s ease-in-out;
+            transform: scale(1.05);
+        }
+    }
+}
+
+.return-catalog {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.cart-img {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+//Cart
+.cart-container {
+    @include flex(column, center, center);
+
+    min-width: 500px;
+    min-height: 300px;
+    position: relative;
+    gap: 1rem;
+    color: $white-primary;
+    background-color: $black-primary;
+
+    h1 {
+        position: absolute;
+        margin: 0;
+        top: 15px;
+        text-align: center;
+    }
+
+    .total-price {
+        position: absolute;
+        bottom: 15px;
+        text-align: center;
+    }
+}
+
+.cross {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    &:hover {
+        transition: 0.3s ease-in-out;
+        transform: scale(1.1);
+    }
+}
+
+.cart-product-container {
+    @include flex(row, space-evenly, center);
+
+    width: 100%;
+    color: $white-primary;
+}
+
+.cart-product-img {
+    width: 50px !important;
+    height: 50px !important;
+}
+
+.center {
+    @include flex(row, center, center);
+
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    backdrop-filter: blur(5px);
+}
+
+//Add to Cart
+.add-cart-container {
+    @include flex(column, center, center);
+
+    width: 600px;
+    height: 200px;
+    background-color: $black-primary;
+
+    button {
+        border: 1px solid $white-primary;
+        color: $white-primary;
+
+        &:hover {
+            transition: 0.3s ease-in-out;
+            color: $black-primary;
+            background-color: $white-primary;
+        }
+    }
+}
+
+.content-container {
+    @include flex(row, space-evenly, center);
+
+    width: 100%;
+    gap: 1rem;
+
+    h3,
+    p {
+        color: $white-primary;
+    }
+
+    img {
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+    }
 }
